# land-apply_jedi_incr

./: CMakeLists.txt  build.sh
sorc/: Makefile_soilinc  NoahMPdisag_module.f90  README.md  apply_incr_noahmp_snow.f90  apply_incr_noahmp_soil.f90  makefile_soilinc.sh  read_write_data.f90  soil_increments.f90
sorc/snow/: apply_incr_noahmp_snow.f90
sorc/soil/: Makefile  apply_incr_noahmp_soil.f90  makefile.sh  soil_increments.f90
